# envman

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  SUPPORT.md  agent-repo-shape.json  external_skills.lock.json  install.py  pyproject.toml
.agents/skills/envman-environment-variable-manager/: SKILL.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  configuration.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml
docs/: INDEX.md  _config.yml  index.md  index.yaml
docs/_layouts/: default.html
docs/assets/: site.css
docs/development/: architecture.md  testing.md  versioning-and-releases.md
docs/getting-started/: installation.md
docs/governance/: publishing-checklist.md
docs/guides/: backups-and-migration.md  cli.md  tui.md
docs/prompts/: bootstrap-planning-agent.md
docs/reference/: agent-repo-shape.md  install-source-and-updates.md  storage-and-shell-loading.md
scripts/: check_docs.py  deploy.py  release_assets.py  render_agent_skill.py  render_installer.py  version.py
src/envman/: __init__.py  _release_protocol.py  cli.py
tests/: test_envman.py  test_release_assets.py  test_release_protocol.py  test_version.py
